testGameManager e warnings tratados